// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`list Validates and generates defaults generates defaults for composite types 1`] = `
Array [
  Object {
    "kind": "hasNonZeroLength",
    "message": "hasNonZeroLength: no params",
    "params": undefined,
    "paths": Array [],
  },
]
`;

exports[`list Validates and generates defaults generates defaults for composite types 2`] = `
Array [
  Object {
    "kind": "biggerOrEqThan",
    "message": "Number is too small",
    "params": 10,
    "paths": Array [
      0,
    ],
  },
]
`;

exports[`list Validates and generates defaults validates with static checking 1`] = `
Array [
  Object {
    "kind": "unknown",
    "message": "Not a list",
    "params": undefined,
    "paths": Array [],
  },
]
`;

exports[`list Validates and generates defaults validates with static checking 2`] = `
Array [
  Object {
    "kind": "number",
    "message": "number: no params",
    "params": undefined,
    "paths": Array [
      0,
    ],
  },
  Object {
    "kind": "number",
    "message": "number: no params",
    "params": undefined,
    "paths": Array [
      2,
    ],
  },
]
`;
